--- a/links.html
+++ b/links.html
@@ -5,5 +5,8 @@ layout: default
 <!-- This page provides the sidebar links for mobile, where the sidebar is hidden -->
 
 <div class="well">
-  {% include links-list.html %}
+	{% include releases.html %}
+	{% include projects.html %}
+	{% include collection.html %}
+	{% include links-list.html %}
 </div>
